--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,16 +101,20 @@ android {
     }
 
     // Ensure the no-op dependency is always used in JVM tests.
-    configurations.all { config ->
-        if (config.name.contains('UnitTest') || config.name.contains('AndroidTest')) {
-            config.resolutionStrategy.eachDependency { details ->
-                if (details.requested.group == 'com.squareup.leakcanary' && details.requested.name == 'leakcanary-android') {
-                    details.useTarget(group: details.requested.group, name: 'leakcanary-android-no-op', version: details.requested.version)
+    configurations {
+
+        apk.exclude group: "junit", module: "junit"
+
+        all { config ->
+            if (config.name.contains('UnitTest') || config.name.contains('AndroidTest')) {
+                config.resolutionStrategy.eachDependency { details ->
+                    if (details.requested.group == 'com.squareup.leakcanary' && details.requested.name == 'leakcanary-android') {
+                        details.useTarget(group: details.requested.group, name: 'leakcanary-android-no-op', version: details.requested.version)
+                    }
                 }
             }
         }
     }
-
     packagingOptions {
         exclude 'META-INF/main.kotlin_module'
     }
